<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<RelativeLayout
    android:id="@+id/addItemRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".ui.add.AddItemActivity">

    <FrameLayout
        android:id="@+id/sceneContainer"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height">
        <include layout="@layout/scene_item_image" />
    </FrameLayout>

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sceneContainer"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/category_title_padding"
        android:text="@string/category_title"
        android:textColor="@color/colorAccent" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sceneContainer"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_toRightOf="@+id/categoryTitle" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryTitle"
        android:layout_marginTop="@dimen/default_margin"
        app:counterEnabled="true"
        app:counterMaxLength="30">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:maxLines="2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/priceTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextInput"
        android:layout_marginTop="@dimen/default_margin"
        app:counterEnabled="true"
        app:counterMaxLength="30">

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/detailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceTextInput"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/hint_details"
        android:lines="2" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsEditText"
        android:layout_marginTop="@dimen/default_margin"
        android:onClick="onClickAddItem"
        android:text="@string/hint_add_item" />
</RelativeLayout>
</ScrollView>
